# ANIMA-protocol

./: .gitignore  EXPLORER.md  LICENSE  PREDICTOR_EXAMPLES.md  PREDICTOR_SUMMARY.md  README.md  project_analysis.md
agent-runtime/: DIRECTORY_STRUCTURE.md  HANDOFF_TO_JOSHUA.md  MASTER_CHECKLIST.md  anima.py  main.py  predictor.py  pyproject.toml  test_nvidia_model.py
agent-runtime/anima.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent-runtime/src/: backend_client.py  keys.py  orchestrator.py  predictor.py  sui_client.py  walrus_publish.py
agent-runtime/wallet_management/: __init__.py  chat.py  intent_parser.py  wallet_agent.py
app/: package.json  pnpm-lock.yaml
app/app/: globals.css  layout.tsx  page.tsx
app/app/components/: CallToAction.tsx  ConnectBtn.tsx  Footer.tsx  Hero.tsx  HowToUse.tsx  InteractiveNfaCore.tsx  IntroducingNFA.tsx  Navbar.tsx  (+1 more)
backend/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
backend/scripts/: get-pools.ts  setup-test-env.ts
backend/src/: app.controller.ts  app.module.ts  main.ts
contracts/: Move.toml
contracts/sources/: anima.move  protocol.move  skill_registry.move
contracts/tests/: anima_tests.move
docs/: HOT_WALLET_GUIDE.md  LITEPAPER.md
explorer/: package.json  pnpm-lock.yaml
explorer/app/: globals.css  layout.tsx
explorer/hooks/: useAgent.ts  useAgentActions.ts  useProtocolStats.ts
explorer/lib/: constants.ts  sui.ts  supabase.ts  utils.ts
indexer/: cursor.json  handlers.ts  index.ts  listener.ts  package.json  pnpm-lock.yaml  tsconfig.json
(+24 files in other folders)
